# image-search

./: .gitignore  .gitmodules  Makefile  README.md  alembic.ini  docker-compose.yaml  mypy.ini  pyproject.toml
alembic/: env.py
alembic/versions/: b80c2aaff018_add_image_data.py  cdb794c720ae_create_table.py
docker/: Dockerfile
docs/: cosine_score.md
image_data/val2014_embeddings/: clip.npy
scripts/: check_text_embedding.py  convert_images_to_embeddings.py  get_embedding.py  get_text_embedding.py
src/: main.py
src/adapter/inward/web/feedback/: router.py  schema.py
src/adapter/inward/web/image/: image_exception.py  router.py  schema.py
src/adapter/outward/persistence/: database.py  feedback_repository.py  feedback_sqlalchemy_model.py  feeedback_mapper.py  image_mapper.py  image_repository.py  image_sqlalchemy_model.py  search_image_record_exception.py  search_image_record_mapper.py  search_image_record_repository.py
src/adapter/outward/persistence/feedback/: feedback_exception.py  feedback_mapper.py  feedback_persistence_adapter.py  feedback_repository.py  feedback_sqlalchemy_model.py
src/adapter/outward/persistence/image/: image_exception.py  image_mapper.py  image_persistence_adapter.py  image_repository.py  image_sqlalchemy_model.py
src/adapter/outward/persistence/search_image_record/: search_image_record_exception.py  search_image_record_mapper.py  (+3 more)
src/app/domain/common/: exception.py
src/app/domain/entity/: embedding_strategy.py  image.py  search_image_record.py  text_query.py
src/common/: container.py
tests/: test_all.py
(+15 files in other folders)
